--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,30 @@ body {
     margin-right: 100px;
     text-align: center;
   }
-  div p {
+  h3 {
     color: #f6fbf4;
     margin-left: 100px;
     margin-right: 100px;
     text-align: center;
+  }
+  div p {
+    color: #f6fbf4;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: justify-all;
     font-weight: lighter;
   }
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 50%;
     height: auto;
     align-items: center;
   }
-  
+  a {
+    color: #242424;
+    font-weight: bolder;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: center;
+  }
