--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
     color: #f6fbf4;
     margin-left: 100px;
     margin-right: 100px;
-    text-align: justify-all;
+    text-align: center;
     font-weight: lighter;
   }
 img {
@@ -36,7 +36,7 @@ img {
     align-items: center;
   }
   a {
-    color: #242424;
+    color: #F6FBF4;
     font-weight: bolder;
     margin-left: 100px;
     margin-right: 100px;
